@@ -1,5 +1,7 @@
 Date	Added
 01/07
+        * The TXT char server was rejecting login's "i'm alive" packet and disconnecting
+          it... fixed [celest]
         * Stall_time wasn't being read in login_athena at all (not by the login server,
           because the code didn't read it, nor by TXT map server, since its in the SQL
           inter_athena.conf reading)... so moved it to inter_athena.conf, and
